--- a/ContentProviderExample/ContentProviderExample/AndroidManifest.xml
+++ b/ContentProviderExample/ContentProviderExample/AndroidManifest.xml
@@ -7,9 +7,9 @@
  http://sam.zoy.org/wtfpl/COPYING for more details.
 -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="example.contentprovider"
-      android:versionCode="1"
-      android:versionName="1.0">
+          package="example.contentprovider"
+          android:versionCode="1"
+          android:versionName="1.0">
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="ContentProviderActivity"
                   android:label="@string/app_name">
@@ -18,5 +18,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <provider android:name="ExampleProvider" 
+                  android:readPermission="example.contentprovider.READ"
+                  android:label="Example Content Provider"
+                  android:authorities="example.contentprovider.provider"
+        />
     </application>
 </manifest>
