--- a/ContentProviderExample/ContentResolverExample/AndroidManifest.xml
+++ b/ContentProviderExample/ContentResolverExample/AndroidManifest.xml
@@ -3,6 +3,7 @@
       package="example.contentresolver"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-permission android:name="example.contentprovider.READ" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="ContentResolverActivity"
                   android:label="@string/app_name">
