--- a/LibraryTestExample/LibraryExample/AndroidManifest.xml
+++ b/LibraryTestExample/LibraryExample/AndroidManifest.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+ This program is free software. It comes without any warranty, to
+ the extent permitted by applicable law. You can redistribute it
+ and/or modify it under the terms of the Do What The Fuck You Want
+ To Public License, Version 2, as published by Sam Hocevar. See
+ http://sam.zoy.org/wtfpl/COPYING for more details.
+-->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="codeguru.example.librarytestexample"
-      android:versionCode="1"
-      android:versionName="1.0">
+          package="codeguru.example.library"
+          android:versionCode="1"
+          android:versionName="1.0">
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name="ACTIVITY_ENTRY_NAME"
+        <activity android:name="HelloLibraryActivity"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
