--- a/OpenGlExample/AndroidManifest.xml
+++ b/OpenGlExample/AndroidManifest.xml
@@ -10,6 +10,7 @@
           package="codeguru.example.opengl"
           android:versionCode="1"
           android:versionName="1.0">
+    <uses-feature android:glEsVersion="0x00020000" android:required="true" />
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
         <activity android:name="OpenGlExample"
                   android:label="@string/app_name">
