--- a/OverrideOnClickListener/AndroidManifest.xml
+++ b/OverrideOnClickListener/AndroidManifest.xml
@@ -22,6 +22,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="SubclassActivity" android:label="Subclass Activity"></activity>
     </application>
 
 </manifest>
