--- a/GoogleMapsExample/main/AndroidManifest.xml
+++ b/GoogleMapsExample/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="codeguru.onclicklistener"
+    package="codeguru.maps"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,15 +14,14 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="codeguru.onclicklistener.MainActivity"
-            android:label="@string/app_name" />
-        <activity android:name="SubclassActivity" android:label="Subclass Activity">
+            android:name="codeguru.maps.MainActivity"
+            android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        </application>
+    </application>
 
 </manifest>
