--- a/GoogleMapsExample/main/project.properties
+++ b/GoogleMapsExample/main/project.properties
@@ -12,3 +12,5 @@
 
 # Project target.
 target=android-19
+android.library.reference.1=../../appcompat
+android.library.reference.2=../google-play-services_lib
