CheckableListView: Create `AddActivity`

--- a/CheckableListView/app/src/main/AndroidManifest.xml
+++ b/CheckableListView/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="codeguru.checkablelistview.AddActivity"
+            android:label="@string/add"
+            android:parentActivityName="codeguru.checkablelistview.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity" />
+        </activity>
     </application>
 
 </manifest>
