--- a/RoomExample/app/build.gradle
+++ b/RoomExample/app/build.gradle
@@ -20,13 +20,17 @@ android {
 
 dependencies {
     def appcompat_version = "27.1.1"
+    def room_version = "1.1.1"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "com.android.support:appcompat-v7:$appcompat_version"
     implementation "com.android.support:support-v4:$appcompat_version"
     implementation "com.android.support:recyclerview-v7:$appcompat_version"
     implementation "com.android.support:design:$appcompat_version"
+    implementation "android.arch.persistence.room:runtime:$room_version"
+
     testImplementation 'junit:junit:4.12'
+
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
