--- a/RoomExample/app/build.gradle
+++ b/RoomExample/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation "com.android.support:design:$appcompat_version"
     implementation "android.arch.persistence.room:runtime:$room_version"
 
+    annotationProcessor  "android.arch.persistence.room:compiler:$room_version"
+
     testImplementation 'junit:junit:4.12'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
